fixed padding on mobile

--- a/src/components/findUs/FindUs.module.css
+++ b/src/components/findUs/FindUs.module.css
@@ -1,9 +1,9 @@
 .section {
-  padding: 0 33px;
+  padding: 0 16px;
 }
 
 .sectionTitle {
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 700;
   line-height: 36.57px;
   letter-spacing: -0.03em;
