--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footerSection {
-  padding: 18px 33px;
+  padding: 18px 16px;
 }
 
 .footerLogo {
