--- a/src/components/lots/Lots.module.css
+++ b/src/components/lots/Lots.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 36px 33px;
+  padding: 36px 16px;
 }
 
 .title {
