--- a/src/components/paginatedCategories/PaginatedCategories.module.css
+++ b/src/components/paginatedCategories/PaginatedCategories.module.css
@@ -1,7 +1,7 @@
 .category {
   position: relative;
   /* width: 90%; */
-  padding: 0 40px;
+  padding: 0 16px;
 }
 
 .arrowBtn {
